[tool.poetry]
name = "sdcopy"
version = "0.1.0"
description = "Tool for saving files off SD cards"
authors = ["Dmitry Gerasimenko <kiddima@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kidig/sdcopy"
packages = [
    { include = "sdcopy" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
]

[tool.poetry.scripts]
sdcopy = "sdcopy.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
extend-select = ["I", "T20", "UP"]
